--- a/src/view_client/LoginView.fxml
+++ b/src/view_client/LoginView.fxml
@@ -52,6 +52,16 @@
                <children>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
+                        <Label text="USERNAME" />
+                        <TextField fx:id="nameField" text="steffen" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
                         <Button mnemonicParsing="false" onAction="#connect" text="Connect" />
                         <Label fx:id="errorLabel" prefHeight="18.0" prefWidth="30.0" text="Label" textAlignment="CENTER" textFill="#d11e1e" wrapText="true" VBox.vgrow="ALWAYS" />
                      </children>
