--- a/src/view_client/ChessBoard.fxml
+++ b/src/view_client/ChessBoard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,6 +8,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" userData="Chess" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view_client.ChessViewController">
    <children>
@@ -266,5 +268,10 @@
             </ImageView>
          </children>
       </Pane>
+      <Button layoutX="300.0" layoutY="50.0" mnemonicParsing="false" onAction="#changeView" prefWidth="100.0" text="ChangeView">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
