--- a/src/view_client/ChessBoard.fxml
+++ b/src/view_client/ChessBoard.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" userData="Chess" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view_client.ChessViewController">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="667.0" prefWidth="700.0" userData="Chess" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view_client.ChessViewController">
    <children>
       <GridPane fx:id="grid" gridLinesVisible="true" layoutX="147.0" layoutY="97.0" style="-fx-background-color: #FAF0E6;">
         <columnConstraints>
@@ -273,5 +276,11 @@
             <Font size="11.0" />
          </font>
       </Button>
+      <ScrollPane layoutY="504.0" prefHeight="117.0" prefWidth="700.0">
+         <content>
+            <ListView prefHeight="138.0" prefWidth="683.0" style="-fx-background-color: #E8EAE2;" />
+         </content>
+      </ScrollPane>
+      <TextField layoutX="8.0" layoutY="628.0" prefHeight="25.0" prefWidth="689.0" promptText="Chat with your opponent" style="-fx-background-color: #E8EAE2;" />
    </children>
 </Pane>
