add: initial chat functionality

--- a/src/view_client/ChessBoard.fxml
+++ b/src/view_client/ChessBoard.fxml
@@ -278,9 +278,9 @@
       </Button>
       <ScrollPane layoutX="50.0" layoutY="516.0" prefHeight="89.0" prefWidth="600.0">
          <content>
-            <ListView prefHeight="103.0" prefWidth="585.5" style="-fx-background-color: #E8EAE2;" />
+            <ListView fx:id="listView" prefHeight="103.0" prefWidth="585.5" style="-fx-background-color: #E8EAE2;" />
          </content>
       </ScrollPane>
-      <TextField layoutX="50.0" layoutY="618.0" prefHeight="40.0" prefWidth="600.0" promptText="Chat with your opponent" style="-fx-background-color: #E8EAE2;" />
+      <TextField fx:id="chatField" layoutX="50.0" layoutY="618.0" onAction="#enterPressed" prefHeight="40.0" prefWidth="600.0" promptText="Chat with your opponent" style="-fx-background-color: #E8EAE2;" />
    </children>
 </Pane>
